Add ToDoItem component

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -7,6 +7,7 @@
   --vt-c-black: #181818;
   --vt-c-black-soft: #222222;
   --vt-c-black-mute: #282828;
+  --vt-black: rgba(0, 0, 0, 0.1);
 
   --vt-c-indigo: #2c3e50;
 
@@ -62,7 +63,7 @@
 body {
   min-height: 100vh;
   color: var(--color-text);
-  background: var(--color-background);
+  background-color: #faf9f8;
   transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
